test/compile_errors/err_option_unzip_non_tuple.w
//! expect-error: Option.unzip() requires Option[(A, B)]

fn main:
    let x: Option[i32] = Some(1)
    let _ = x.unzip()
